# jekos

./: README.markdown
deploy/: jekos-ec2.nix  jekos.nix
installer/: index.html  installer.js
jekos.org/: builder.sh  default.nix
jekos.org/www/: text.html
jekos.org/www/installer/: application.javascript
kernel/: Main.hs  default.nix  kernel.cabal
ui/: builder.sh  default.nix  index.html  login.html
ui/css/: appstore.styl  common.styl  index.styl  lib.styl  login.styl
ui/js/: index.js  package.json
ui/js/lib/: appstore.js
