name:                kernel
version:             0.1.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Chris Forno
maintainer:          jekor@jekor.com
copyright:           2015 Chris Forno
homepage:            https://github.com/jekor/jekos
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable kernel
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       aeson,
                       asn1-encoding,
                       asn1-types,
                       attoparsec,
                       base == 4.8.*,
                       base64-bytestring,
                       bcrypt,
                       blaze-builder,
                       bytestring,
                       containers,
                       cookie,
                       crypto-pubkey,
                       crypto-pubkey-types,
                       data-default,
                       directory,
                       either,
                       filepath,
                       http-types,
                       network,
                       posix-pty,
                       servant-server,
                       SHA,
                       text,
                       time,
                       tls,
                       transformers,
                       wai,
                       wai-cors,
                       wai-websockets,
                       wai-middleware-static,
                       warp,
                       warp-tls,
                       websockets
  -- hs-source-dirs:      
  default-language:    Haskell2010